--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<div class="form_toggle_items">
 								<form class="sign">
 									<div class="form-group">
-										<label for="fio">ФИО</label>
+										<label for="fio">Наименование организации</label>
 										<input type="text" id="fio">
 									</div>
 									<div class="form-group">
