--- a/faq.html
+++ b/faq.html
@@ -127,7 +127,7 @@
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">КАКИЕ ДОКУМЕНТЫ НУЖНЫ?</div>
+							<div class="three">Какие документы необходимы для заключения договора?</div>
 							<div class="small">
 								Для Юридического лица (АО, ООО, ПАО и пр.):
 								<ol>
@@ -151,7 +151,7 @@
 							</div>
 						</div>
 						<div class="faq_widget_item">
-							<div class="three">КАКИЕ ВИДЫ ДОСТАВКИ ЕСТЬ?</div>
+							<div class="three">Способы доставки</div>
 							<div class="small">
 								<ol>
 									<li>Самовывоз;</li>
@@ -179,13 +179,13 @@
 						<div class="faq_widget_item">
 							<div class="three">МОГУ Я ПОКУПАТЬ ОТ РАЗНЫХ ЮР.ЛИЦ?</div>
 							<div class="small">
-								Да, покупка от разных юридических лиц возможна, для этого необходимо пройти процедуру регистрации (ссылка на форму регистрации) и верификации (ссылка на форму верификации)
+								Да, покупка от разных юридических лиц возможна, для этого необходимо пройти процедуру <a href="/azot/index.html">регистрации</a> и <a href="/azot/verification.html">верификации</a>
 							</div>
 						</div>
 						<div class="faq_widget_item">
 							<div class="three">Как рассчитывается стоимость?</div>
 							<div class="small">
-								Цена продукции зависит пункта назначения доставки продукции, его базовой цены. Итоговую стоимость вы можете найти в разделе «Личный кабинет» (ссылка на личный кабинет) либо по телефону.
+								Цена продукции зависит пункта назначения доставки продукции, его базовой цены. Итоговую стоимость вы можете найти в разделе <a href="/azot/profile.html">«Личный кабинет»</a>  Либо по телефону +7 (85549) 2-60-43
 							</div>
 						</div>
 					</div>
