--- a/product.html
+++ b/product.html
@@ -213,7 +213,7 @@
 											</select>
 										</div>
 										<div class="w-100">
-											<label for="">Выбрать станцию назначения</label>
+											<label for="">Станция назначения</label>
 											<select name="" id="delivery_type_list" class="js-select-single">
 												<option value="">Москва-3</option>
 											</select>
@@ -230,7 +230,7 @@
 												<input type="radio" checked name="company_item" value="До фиксированной даты" id="company_choice1">
 											</div>
 											<div class="choice_button choice_accent ">
-												<label for="company_choice2" name="company">Дата начала периода поставки </label>
+												<label for="company_choice2" name="company">Период поставки </label>
 												<input type="radio" name="company_item" value="Дата начала периода поставки"
 													id="company_choice2">
 											</div>
@@ -244,7 +244,7 @@
 										</div>
 										<div class="form-group mt-2 d-flex input-choice" data-company-type="Дата начала периода поставки">
 											<div class="form-group">
-												<label for="">От какого числа поставка</label>
+												<label for="">Дата начала периода поставки</label>
 												<input type="date" name="" id="current" disabled>
 											</div>
 											<div class="form-group mt-0">
