--- a/catalog.html
+++ b/catalog.html
@@ -116,7 +116,7 @@
 					<div class="page_content">
 						<h1 class="section-title mb-4">Каталог</h1>
 						<div class="d-flex align-items-center justify-content-between">
-							<p class="mb-0 light">Минимальный заказ 0,1 тонны. Выберите продукцию</p>
+							<p class="mb-0 light">Минимальный заказ 0,05 тонны. Выберите продукцию</p>
 							<div class="catalog_filters d-flex align-items-center">
 								<select name="" id="" class="js-select-single">
 									<option value="" selected>Все производители</option>
@@ -140,6 +140,7 @@
 							<img src="images/creator.jpg" loading="lazy">
 							<span class="small light">АО "Аммоний"</span>
 						</div>
+						<div class="btn btn-accent  btn-large mt-3">Оформить заявку</div>
 					</a>
 				</div>
 				<div class="col-lg-3">
@@ -151,6 +152,7 @@
 							<img src="images/creator.jpg" loading="lazy">
 							<span class="small light">АО "Аммоний"</span>
 						</div>
+						<div class="btn btn-accent  btn-large mt-3">Оформить заявку</div>
 					</a>
 				</div>
 				<div class="col-lg-3">
@@ -162,6 +164,7 @@
 							<img src="images/creator.jpg" loading="lazy">
 							<span class="small light">АО "Аммоний"</span>
 						</div>
+						<div class="btn btn-accent  btn-large mt-3">Оформить заявку</div>
 					</a>
 				</div>
 				<div class="col-lg-3">
@@ -173,6 +176,7 @@
 							<img src="images/creator.jpg" loading="lazy">
 							<span class="small light">АО "Аммоний"</span>
 						</div>
+						<div class="btn btn-accent  btn-large mt-3">Оформить заявку</div>
 					</a>
 				</div>
 			</div>
@@ -367,7 +371,7 @@
 						</div>
 						<div class="form-group mt-2 d-flex input-choice" data-company-type="Дата начала периода поставки">
 							<div class="form-group">
-								<label for="">От какого числа поставка</label>
+								<label for="">Дата начала периода поставки</label>
 								<input type="date" name="" id="current" disabled>
 							</div>
 							<div class="form-group mt-0">
