--- a/faq.html
+++ b/faq.html
@@ -185,7 +185,7 @@
 						<div class="faq_widget_item">
 							<div class="three">Как рассчитывается стоимость?</div>
 							<div class="small">
-								Цена продукции зависит пункта назначения доставки продукции, его базовой цены. Итоговую стоимость вы можете найти в разделе <a href="/azot/profile.html">«Личный кабинет»</a>  Либо по телефону +7 (85549) 2-60-43
+								Цена продукции зависит от пункта назначения доставки продукции, его базовой цены. Итоговую стоимость вы можете узнать, отправив заявку через личный кабинет.
 							</div>
 						</div>
 					</div>
