--- a/frontpage.html
+++ b/frontpage.html
@@ -156,6 +156,7 @@
 									</div>
 									<div class="bold text mb-2">Загрузите документы для верификации</div>
 									<p class="small mb-0">Наши специалисты оперативно проверят поступившие документы, в случае возникновения вопросов – свяжутся для уточнения.</p>
+									<a href="/azot/verification.html" class="btn btn-accent mt-3">Верификация</a>
 								</div>
 							</div>
 							<div class="buy_steps_widget">
