--- a/product.html
+++ b/product.html
@@ -244,11 +244,11 @@
 										</div>
 										<div class="form-group mt-2 d-flex input-choice" data-company-type="Дата начала периода поставки">
 											<div class="form-group">
-												<label for="">Дата начала периода поставки</label>
+												<label class="label-small" for="">Дата начала периода поставки</label>
 												<input type="date" name="" id="current" disabled>
 											</div>
 											<div class="form-group mt-0">
-												<label for="">Дата окончания периода поставкии</label>
+												<label class="label-small" for="">Дата окончания периода поставкии</label>
 												<input type="date" name="" id="4" disabled  style="border-left: none;">
 											</div>
 										</div>
