--- a/verification.html
+++ b/verification.html
@@ -151,7 +151,7 @@
 					<div class="verification_steps sticky">
 						<div class="verification_steps_item active" data-step="Шаг 1">
 							<span class="small bold">Шаг 1</span>
-							<span class="small">Правовая форма и тип реализации</span>
+							<span class="small">Правовая форма</span>
 						</div>
 						<div class="verification_steps_item" data-step="Шаг 2">
 							<span class="small bold">Шаг 2</span>
@@ -270,7 +270,7 @@
 										<label for="inn">ИНН</label>
 										<input type="text" id="inn">
 									</div>
-									<div class="form-group">
+									<div class="form-group input-choice" data-company-type="Юридическое лицо">
 										<label for="kpp">КПП</label>
 										<input type="text" id="kpp">
 									</div>
