--- a/profile.html
+++ b/profile.html
@@ -233,7 +233,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="/azot/profile.html">
+									<a href="/azot/password.html">
 										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_1603_4832)">
 												<path d="M15.75 1.5C14.696 1.49973 13.6565 1.74637 12.7149 2.22016C11.7734 2.69395 10.9559 3.38171 10.328 4.22833C9.70011 5.07495 9.27927 6.05688 9.0992 7.09543C8.91913 8.13398 8.98484 9.20027 9.29107 10.2088L1.5 18V22.5H6L13.7911 14.7088C14.7195 14.9907 15.6978 15.0692 16.6593 14.9388C17.6208 14.8083 18.5429 14.4722 19.3627 13.9532C20.1826 13.4341 20.8808 12.7445 21.41 11.9312C21.9392 11.1179 22.2868 10.2 22.4291 9.24022C22.5714 8.28042 22.5052 7.30121 22.2348 6.36933C21.9645 5.43745 21.4964 4.57481 20.8625 3.8402C20.2286 3.10558 19.4438 2.51627 18.5615 2.11243C17.6793 1.70858 16.7203 1.49969 15.75 1.5ZM15.75 13.5C15.2336 13.4997 14.72 13.4233 14.2259 13.2733L13.3657 13.0125L12.7304 13.6479L10.3445 16.0338L9.31057 15L8.25 16.0606L9.28403 17.0945L8.0946 18.284L7.06057 17.25L6 18.3106L7.03403 19.3445L5.3787 21H3V18.6213L10.3517 11.2696L10.9871 10.634L10.7267 9.774C10.4061 8.71724 10.4269 7.5863 10.7862 6.54206C11.1454 5.49781 11.8248 4.59345 12.7277 3.9576C13.6306 3.32175 14.711 2.9868 15.8152 3.0004C16.9195 3.014 17.9913 3.37545 18.8782 4.03333C19.7652 4.69122 20.4221 5.61204 20.7556 6.66482C21.089 7.71759 21.082 8.8487 20.7355 9.89724C20.389 10.9458 19.7207 11.8584 18.8256 12.5052C17.9305 13.152 16.8543 13.5001 15.75 13.5Z" fill="#999999" />
@@ -454,13 +454,21 @@
 					</div>
 					<hr>
 					<div class="four mb-3 mt-4 text-normal">Способы доставки</div>
-					<div class="form-group select-group d-flex">
-						<select name="" id="" class="js-select-single">
-							<option value="">ЖД транспорт</option>
-						</select>
-						<select name="" id="" class="js-select-single">
-							<option value="">Москва-3</option>
-						</select>
+					<div class="form-group select-group d-flex ">
+						<div>
+							<label for=""><br></label>
+							<select name="" id="delivery_type" class="js-select-single">
+								<option value="ЖД">ЖД транспорт</option>
+								<option value="Самовывоз">Самовывоз авто</option>
+								<option value="Автодоставка">Автодоставка до места назначения</option>
+							</select>
+						</div>
+						<div class="w-100">
+							<label for="">Станция назначения</label>
+							<select name="" id="delivery_type_list" class="js-select-single">
+								<option value="">Москва-3</option>
+							</select>
+						</div>
 					</div>
 					<div class="link_accent mt-3 mb-4">Добавить пункт выгрузки</div>
 					<hr>
@@ -488,7 +496,7 @@
 						</div>
 						<div class="form-group mt-2 d-flex input-choice" data-company-type="Дата начала периода поставки">
 							<div class="form-group">
-								<label for="">От какого числа поставка</label>
+								<label for="">Дата начала периода поставки</label>
 								<input type="date" name="" id="current" disabled>
 							</div>
 							<div class="form-group mt-0">
