--- a/password.html
+++ b/password.html
@@ -328,8 +328,8 @@
 						<nav>
 							<ul>
 								<li><a href="/azot/faq.html">Помощь</a></li>
-								<li><a href="#">Политика конфиденциальности</a></li>
-								<li><a href="#">Пользовательское соглашение</a></li>
+								<li><a href="/azot/privacy.html">Политика конфиденциальности</a></li>
+								<li><a href="/azot/agreement.html">Пользовательское соглашение</a></li>
 								<li><a href="#">География работы</a></li>
 								<li><a href="#">Новости и обновления</a></li>
 							</ul>
